# Lista

./: .env.example  .gitignore  App.tsx  PROJECT_DOCUMENTATION.md  RECIPE_MODE_PLAN.md  SUPERMARKET_PIVOT_SUMMARY.md  firebase.ts  firestore.rules  index.html  manifest.json  package.json  service-worker.js  tsconfig.json  types.ts  vercel.json  vite.config.ts
.vercel/: project.json
components/: AccessibilityMenu.tsx  AppModeToggle.tsx  CategoryCard.tsx  CategoryItem.tsx  ChatActionButtons.tsx  ChatMessage.tsx  Header.tsx  InputArea.tsx  LocationInput.tsx  Logo.tsx  ModeSelector.tsx  OrganizeListBreakdownModal.tsx  PriceAgentChat.tsx  PriceComparisonPanel.tsx  ProductCard.tsx  ProductCatalogArea.tsx  ProductDetailModal.tsx  ProductSearchInput.tsx  RecipeBadge.tsx  RecipeBreakdownModal.tsx  RecipeInputCard.tsx  ResultCard.tsx  SavingsReport.tsx  ShareModal.tsx  ShoppingInputArea.tsx  ShoppingListBreakdownModal.tsx  ShoppingPriceStep.tsx  Sidebar.tsx  (+1 more)
pricepilot-agent/: .env.example  PRICEPILOT.md  pyproject.toml
pricepilot-agent/deploy/: Dockerfile  cloudbuild.yaml  vertex_config.yaml
pricepilot-agent/pricepilot/: __init__.py  agent.py  config.py  types.py
pricepilot-agent/pricepilot/agents/: __init__.py  browser_agent.py  checkout_builder.py  list_interpreter.py  orchestrator.py  store_navigator.py
pricepilot-agent/pricepilot/api/: __init__.py  server.py
pricepilot-agent/pricepilot/tools/: __init__.py  browser_tools.py  cart_tools.py  checkout_tools.py  search_tools.py
pricepilot-agent/tests/: test_browser_tools.py  test_checkout.py  test_list_interpreter.py
(+26 files in other folders)
